[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/ChangeLevelArea.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72.2794, 63.2504 )

[node name="ChangeLevelArea" type="Area2D"]
z_index = 5
z_as_relative = false
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
margin_right = 274.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 267.0
margin_bottom = 57.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 260.0
margin_bottom = 14.0
text = "Do you want to leave current level?"
align = 1
valign = 1

[node name="MarginContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 260.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YES" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer"]
margin_left = 32.0
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 32 )
text = "YES"

[node name="NO" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer"]
margin_left = 132.0
margin_right = 228.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 32 )
text = "NO"

[connection signal="area_entered" from="." to="." method="_on_ChangeLevelArea_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_ChangeLevelArea_area_exited"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/YES" to="." method="_on_YES_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/NO" to="." method="_on_NO_pressed"]
